--- a/ui/nginx/default.conf
+++ b/ui/nginx/default.conf
@@ -14,9 +14,9 @@ server {
   gzip_types        text/plain text/css application/json application/javascript application/x-javascript text/xml application/xml application/xml+rss text/javascript;
   gzip_comp_level   9;
 
-  location / {
+  location /ui/ {
     autoindex on;
-    root  /usr/share/nginx/html/shoppy-ui;
-    index  /index.html;
+    root  /usr/share/nginx/html;
+    index  /ui/index.html;
   }
 }
