--- a/api/shoppy-api/pom.xml
+++ b/api/shoppy-api/pom.xml
@@ -16,8 +16,21 @@
 
 	<properties>
 		<java.version>1.8</java.version>
+		<keycloak.version>9.0.3</keycloak.version>
 	</properties>
 
+	<dependencyManagement>
+		<dependencies>
+			<dependency>
+				<groupId>org.keycloak.bom</groupId>
+				<artifactId>keycloak-adapter-bom</artifactId>
+				<version>${keycloak.version}</version>
+				<type>pom</type>
+				<scope>import</scope>
+			</dependency>
+		</dependencies>
+	</dependencyManagement>
+	
 	<dependencies>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -32,11 +45,6 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
 		</dependency>
-		<dependency>
-		   <groupId>org.springframework.boot</groupId>
-		   <artifactId>spring-boot-starter-security</artifactId>
-		</dependency>
-
 		<dependency>
 			<groupId>com.h2database</groupId>
 			<artifactId>h2</artifactId>
@@ -58,8 +66,30 @@
             <artifactId>springfox-bean-validators</artifactId>
             <version>2.8.0</version>
         </dependency>
-        
-        
+
+		<dependency>
+		   <groupId>org.springframework.boot</groupId>
+		   <artifactId>spring-boot-starter-security</artifactId>
+		</dependency>        
+		<!-- https://mvnrepository.com/artifact/org.keycloak/keycloak-spring-security-adapter -->
+		<dependency>
+		    <groupId>org.keycloak</groupId>
+		    <artifactId>keycloak-spring-security-adapter</artifactId>
+		</dependency>
+
+		<dependency>
+		    <groupId>org.keycloak</groupId>
+		    <artifactId>keycloak-spring-boot-2-adapter</artifactId>
+		</dependency>
+
+	  <!-- https://issues.jboss.org/browse/KEYCLOAK-11064 -->
+	  <dependency>
+		   <groupId>org.keycloak</groupId>
+		   <artifactId>keycloak-tomcat7-adapter-dist</artifactId>
+		   <version>${keycloak.version}</version>
+		   <type>pom</type>
+	  </dependency>
+
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
