--- a/api/shoppy-api/pom.xml
+++ b/api/shoppy-api/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>2.2.5.RELEASE</version>
+		<version>2.2.6.RELEASE</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.shoppy</groupId>
@@ -76,19 +76,23 @@
 		    <groupId>org.keycloak</groupId>
 		    <artifactId>keycloak-spring-security-adapter</artifactId>
 		</dependency>
-
+		<!-- https://mvnrepository.com/artifact/org.keycloak/keycloak-spring-boot-2-adapter -->
 		<dependency>
 		    <groupId>org.keycloak</groupId>
 		    <artifactId>keycloak-spring-boot-2-adapter</artifactId>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/org.keycloak/keycloak-authz-client -->
+		<dependency>
+		    <groupId>org.keycloak</groupId>
+		    <artifactId>keycloak-authz-client</artifactId>
+		</dependency>
 
-	  <!-- https://issues.jboss.org/browse/KEYCLOAK-11064 -->
-	  <dependency>
-		   <groupId>org.keycloak</groupId>
-		   <artifactId>keycloak-tomcat7-adapter-dist</artifactId>
-		   <version>${keycloak.version}</version>
-		   <type>pom</type>
-	  </dependency>
+		<!-- https://mvnrepository.com/artifact/org.keycloak/keycloak-spring-boot-2-starter -->
+		<dependency>
+		    <groupId>org.keycloak</groupId>
+		    <artifactId>keycloak-spring-boot-2-starter</artifactId>
+		    <version>4.0.0.Final</version>
+		</dependency>
 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
