--- a/api/shoppy-api/src/main/resources/application.yml
+++ b/api/shoppy-api/src/main/resources/application.yml
@@ -12,8 +12,8 @@ spring:
 keycloak:
   auth-server-url: http://localhost/auth
   realm: shoppy
-  resource: shoppy-api
-  bearer-only: true
+  resource: shoppy-ui
+  bearer-only: false
   confidential-port: 0
   use-resource-role-mappings: true
   principal-attribute: preferred_username
