--- a/reverse_proxy/default.conf
+++ b/reverse_proxy/default.conf
@@ -1,5 +1,5 @@
 upstream ui{
-    server ui:8080;
+    server ui:4200;
 }
 
 upstream api{
@@ -8,6 +8,7 @@ upstream api{
 
 server {
     listen    8080;
+    listen   [::]:80 default_server;
     server_name    _;
 
     location /api {
