--- a/ui/package.json
+++ b/ui/package.json
@@ -11,14 +11,14 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~9.0.3",
-    "@angular/common": "~9.0.3",
-    "@angular/compiler": "~9.0.3",
-    "@angular/core": "~9.0.3",
-    "@angular/forms": "~9.0.3",
-    "@angular/platform-browser": "~9.0.3",
-    "@angular/platform-browser-dynamic": "~9.0.3",
-    "@angular/router": "~9.0.3",
+    "@angular/animations": "~14.0.5",
+    "@angular/common": "~14.0.5",
+    "@angular/compiler": "~14.0.5",
+    "@angular/core": "~14.0.5",
+    "@angular/forms": "~14.0.5",
+    "@angular/platform-browser": "~14.0.5",
+    "@angular/platform-browser-dynamic": "~14.0.5",
+    "@angular/router": "~14.0.5",
     "keycloak-angular": "^7.1.0",
     "keycloak-js": "^9.0.0",
     "rxjs": "~6.5.4",
@@ -28,12 +28,12 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.900.4",
-    "@angular/cli": "~9.0.4",
-    "@angular/compiler-cli": "~9.0.3",
-    "@angular/language-service": "~9.0.3",
-    "@types/node": "^12.11.1",
-    "@types/jasmine": "~3.5.0",
-    "@types/jasminewd2": "~2.0.3",
+    "@angular/cli": "~14.0.5",
+    "@angular/compiler-cli": "~14.0.5",
+    "@angular/language-service": "~14.0.5",
+    "@types/node": "^18.0.3",
+    "@types/jasmine": "~@types/jasmine",
+    "@types/jasminewd2": "~2.0.10",
     "codelyzer": "^5.1.2",
     "jasmine-core": "~3.5.0",
     "jasmine-spec-reporter": "~4.2.1",
