--- a/api/shoppy-api/pom.xml
+++ b/api/shoppy-api/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>2.2.6.RELEASE</version>
+		<version>2.7.1</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.shoppy</groupId>
@@ -17,6 +17,7 @@
 	<properties>
 		<java.version>1.8</java.version>
 		<keycloak.version>9.0.3</keycloak.version>
+		<springfox-swagger.version>3.0.0</springfox-swagger.version>
 	</properties>
 
 	<dependencyManagement>
@@ -49,22 +50,23 @@
 			<groupId>com.h2database</groupId>
 			<artifactId>h2</artifactId>
 			<scope>runtime</scope>
+			<version>2.1.214</version>
 		</dependency>
 		
 		<dependency>
 		    <groupId>io.springfox</groupId>
 		    <artifactId>springfox-swagger2</artifactId>
-		    <version>2.8.0</version>
+		    <version>${springfox-swagger.version}</version>
 		</dependency>
 		<dependency>
 		    <groupId>io.springfox</groupId>
 		    <artifactId>springfox-swagger-ui</artifactId>
-		    <version>2.8.0</version>
+		    <version>${springfox-swagger.version}</version>
 		</dependency>
         <dependency>
             <groupId>io.springfox</groupId>
             <artifactId>springfox-bean-validators</artifactId>
-            <version>2.8.0</version>
+            <version>${springfox-swagger.version}</version>
         </dependency>
 
 		<dependency>
