--- a/api/shoppy-api/src/main/resources/application.yml
+++ b/api/shoppy-api/src/main/resources/application.yml
@@ -1,26 +1,15 @@
 server:
   port: 9000
+  servlet:
+    context-path: /api/
 logging:
   level:
     root: DEBUG
 spring:
-  main:
-    allow-bean-definition-overriding: true
-
-
-# Keycloak
-keycloak:
-  auth-server-url: http://keycloak/auth
-  realm: shoppy
-  resource: shoppy-ui
-  bearer-only: false
-  confidential-port: 0
-  use-resource-role-mappings: true
-  principal-attribute: preferred_username
-  cors: true
-#  securityConstraints[0]:
-#    authRoles[0]: Client
-#    authRoles[1]: Owner
-#    securityCollections[0]:
-#      name: member resource
-#      patterns[0]: /api/items
+  application:
+    name: api
+  security:
+    oauth2:
+      resourceserver:
+        jwt:
+          issuer-uri: http://localhost:8080/auth/realms/master
