--- a/api/shoppy-api/pom.xml
+++ b/api/shoppy-api/pom.xml
@@ -72,28 +72,14 @@
 		<dependency>
 		   <groupId>org.springframework.boot</groupId>
 		   <artifactId>spring-boot-starter-security</artifactId>
-		</dependency>        
-		<!-- https://mvnrepository.com/artifact/org.keycloak/keycloak-spring-security-adapter -->
-		<dependency>
-		    <groupId>org.keycloak</groupId>
-		    <artifactId>keycloak-spring-security-adapter</artifactId>
 		</dependency>
-		<!-- https://mvnrepository.com/artifact/org.keycloak/keycloak-spring-boot-2-adapter -->
 		<dependency>
-		    <groupId>org.keycloak</groupId>
-		    <artifactId>keycloak-spring-boot-2-adapter</artifactId>
+			<groupId>org.springframework.security</groupId>
+			<artifactId>spring-security-oauth2-resource-server</artifactId>
 		</dependency>
-		<!-- https://mvnrepository.com/artifact/org.keycloak/keycloak-authz-client -->
 		<dependency>
-		    <groupId>org.keycloak</groupId>
-		    <artifactId>keycloak-authz-client</artifactId>
-		</dependency>
-
-		<!-- https://mvnrepository.com/artifact/org.keycloak/keycloak-spring-boot-2-starter -->
-		<dependency>
-		    <groupId>org.keycloak</groupId>
-		    <artifactId>keycloak-spring-boot-2-starter</artifactId>
-		    <version>4.0.0.Final</version>
+			<groupId>org.springframework.security</groupId>
+			<artifactId>spring-security-oauth2-jose</artifactId>
 		</dependency>
 
 		<dependency>
