--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -26,40 +26,11 @@ services:
       - DB_USER=keycloak
       - DB_SCHEMA=public
       - DB_PASSWORD=password
+      - PROXY_ADDRESS_FORWARDING=true
     depends_on:
       - postgresdb
     ports:
         - "8081:8080"
-
-#  api:
-#    build: api/shoppy-api
-#    image: shoppy/api:1.0.0
-#    restart: unless-stopped
-#    environment:
-#      - TZ=Europe/Paris
-#    ports:
-#        - "9000:9000"
-        
-#  ui:
-#    build: ui
-#    image: shoppy/ui:1.0.0
-#    restart: unless-stopped
-#    environment:
-#      - TZ=Europe/Paris
-#    ports:
-#        - "8085:8080"
-        
-  reverse-proxy:
-    build: reverse_proxy
-    image: shoppy/reverse-proxy:1.0.0
-    restart: unless-stopped
-    environment:
-      - TZ=Europe/Paris
-    ports:
-      - "8080:8080"
-#    depends_on:
-#      - api
-#      - ui
 
 networks:
   shoppy-network:
